option('disable-mtab', type : 'boolean', value : true,
       description: 'Disable and ignore usage of /etc/mtab')

option('disable-libc-symbol-version', type : 'boolean', value : false,
       description: 'Disable versioned symbols through libc')

option('enable-io-uring', type: 'boolean', value: true,
       description: 'Enable fuse-over-io-uring support')
